--- a/css/main-nav.css
+++ b/css/main-nav.css
@@ -51,7 +51,10 @@
 
 @media(max-width: 659px){
     .main-nav{
-        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        position: fixed;
+        background: rgb(0, 0, 0);
+        top: 0;
     }
 
     .main-nav__menu-items{
